--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,11 @@ nav img {
 
 .nav-links ul {
     list-style: none;
+    display: flex;
+    gap: 15px;
 }
 
 .nav-links ul li {
-    display: inline-block;
-    padding: 8px 12px;
     position: relative;
 }
 
@@ -87,24 +87,13 @@ nav img {
     padding: 12px 34px;
     font-size: 13px;
     background: transparent;
-    position: relative;
     cursor: pointer;
+    transition: background 0.5s, border-color 0.5s;
 }
 
 .hero-btn:hover {
-    border: 1px solid #f44336;
+    border-color: #f44336;
     background: #f44336;
-    transition: 1s;
-}
-
-.red-btn {
-    border: 1px solid #f44336;
-    background: transparent;
-    color: #f44336;
-}
-
-.red-btn:hover {
-    color: #fff;
 }
 
 .course {
@@ -140,7 +129,7 @@ p {
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing: border-box;
-    transition: 0.5s;
+    transition: box-shadow 0.5s;
 }
 
 h3 {
@@ -150,7 +139,7 @@ h3 {
 }
 
 .course-col:hover {
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
 }
 
 .footer {
@@ -193,7 +182,6 @@ h3 {
 
 .about-col img {
     width: 100%;
-    border-radius: 8px;
 }
 
 .about-col h1 {
@@ -202,4 +190,15 @@ h3 {
 
 .about-col p {
     padding: 15px 0 25px;
+}
+
+.red-btn {
+    border: 1px solid #f44336;
+    background: transparent;
+    color: #f44336;
+}
+
+.red-btn:hover {
+    color: #fff;
+    background: #f44336;
 }
