--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .sub-header2 {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/signup.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/signup.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
